--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "convert-array-to-object",
+  "name": "from-array-to-object",
   "version": "0.0.1",
   "description": "Convert array of objects into object with keys based on key we have passed in.",
   "main": "lib/index.js",
@@ -32,11 +32,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antonsacred/convert-array-to-object.git"
+    "url": "git+https://github.com/antonsacred/array-to-object.git"
   },
-  "homepage": "https://github.com/antonsacred/convert-array-to-object#readme",
+  "homepage": "https://github.com/antonsacred/array-to-object#readme",
   "bugs": {
-    "url": "https://github.com/antonsacred/convert-array-to-object/issues"
+    "url": "https://github.com/antonsacred/array-to-object/issues"
   },
   "files": [
     "lib/**/*"
