--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
-  "keywords": [],
+  "keywords": [
+    "array",
+    "objects",
+    "array of objects"
+  ],
   "author": "antonsacred",
   "license": "ISC",
   "devDependencies": {
